# Agrotech-project

./: .replit  Crop Recommendation.ipynb  Pest_Identification.ipynb  README.md  app.py  database.py  pyproject.toml  requirements.txt
static/css/: style.css
templates/: CropRecommendation.docx  CropRecommendation.html  Fertilizer-Result.html  FertilizerRecommendation.html  PesticideRecommendation.html  aphids.html  armyworm.html  auth.html  beetle.html  bollworm.html  crop-result.html  earthworm.html  feedback.html  forgot_password.html  grasshopper.html  index.html  layout.html  login.html  mites.html  mosquito.html  sawfly.html  stem borer.html  unaptfile.html  unauth_index.html
